Renamed checkmark.scss -> icons.scss and added generic output-icon class

--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -191,7 +191,7 @@
                     {{#if valid}}
                         {{#if certificateUpdate}}
                             <svg style="display: inline-block"
-                                 class="warning warn"
+                                 class="output-icon warning warn"
                                  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
                                 <circle class="warning__circle" cx="26" cy="26" r="25"
                                         fill="none"></circle>
@@ -202,7 +202,7 @@
                         {{else}}
                             {{#if certificateWritten}}
                                 <svg style="display: inline-block"
-                                     class="checkmark check"
+                                     class="output-icon checkmark check"
                                      xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
                                     <circle class="checkmark__circle" cx="26" cy="26" r="25"
                                             fill="none"></circle>
@@ -211,7 +211,7 @@
                                 </svg>
                             {{else}}
                                 <svg style="display: inline-block"
-                                     class="warning warn todo-svg"
+                                     class="output-icon warning warn todo-svg"
                                      xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
                                     <circle class="warning__circle" cx="26" cy="26" r="25"
                                             fill="none"></circle>
@@ -221,7 +221,7 @@
                             {{/if}}
                         {{/if}}
                     {{else}}
-                        <svg class="xmark xm" xmlns="http://www.w3.org/2000/svg"
+                        <svg class="output-icon xmark xm" xmlns="http://www.w3.org/2000/svg"
                              viewBox="0 0 52 52">
                             <circle class="xmark__circle" cx="26" cy="26" r="25"
                                     fill="none"></circle>
