--- a/meteor/imports/ui/components/output/icons.scss
+++ b/meteor/imports/ui/components/output/icons.scss
@@ -5,9 +5,7 @@ $color--yellow: #F9A825;
 $color--green: #7ac142;
 $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 
-// Checkmark
-
-.checkmark {
+.output-icon {
   width: 20px;
   height: 20px;
   border-radius: 50%;
@@ -15,7 +13,12 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
   stroke: #fff;
   stroke-miterlimit: 10;
   margin-left: 10px;
-  margin-bottom: -5px;
+  margin-bottom: 2px;
+}
+
+// Checkmark
+
+.checkmark {
   box-shadow: inset 0 0 0 $color--green;
 }
 
@@ -49,14 +52,6 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 // X-Mark
 
 .xmark {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  stroke-width: 2;
-  stroke: #fff;
-  stroke-miterlimit: 10;
-  margin-left: 10px;
-  margin-bottom: -5px;
   box-shadow: inset 0 0 0 $color--red;
 }
 
@@ -90,14 +85,6 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 // Exclamation mark
 
 .warning {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  stroke-width: 2;
-  stroke: #fff;
-  stroke-miterlimit: 10;
-  margin-left: 10px;
-  margin-bottom: -5px;
   box-shadow: inset 0 0 0 $color--yellow;
 }
 
