--- a/meteor/imports/ui/components/views/two_view/index.html
+++ b/meteor/imports/ui/components/views/two_view/index.html
@@ -1,6 +1,7 @@
 <template name="two_view">
     <!-- Create Views container-->
     <div class="views">
+        {{>Template.dynamic template=offline}}
         {{>Template.dynamic template=first}}
         {{>Template.dynamic template=second}}
         {{>Template.dynamic template=third}}
