Fixed impressums footer (fixes #78)

--- a/meteor/imports/ui/components/login/choices/index.html
+++ b/meteor/imports/ui/components/login/choices/index.html
@@ -14,7 +14,7 @@
     <div class="list-block">
         <div class="list-block-label">{{competition_notice}}</div>
     </div>
-    <div style="position: absolute; bottom: 40px; cursor: pointer; width: 100%;">
+    <div class="footer">
         <table align="center">
             <tr>
                 <td style="border-right: 1px solid lightgrey; padding-right: 20px;">
