Re-added missing .truncate class

--- a/meteor/imports/ui/components/input/index.html
+++ b/meteor/imports/ui/components/input/index.html
@@ -6,7 +6,7 @@
                 <div class="navbar-inner">
                     <div class="left" style="width: 100px"><a href="#" data-popup=".popup-help" class="open-popup"><i
                             class="f7-icons">help</i></a></div>
-                    <div class="center">
+                    <div class="center truncate">
                         <div id="input-name-swiper" class="swiper-container" style="height: 100%">
                             <div class="swiper-wrapper">
                                 {{#each a in athletes}}
