Added fade-in of athletes in 'done' section (resolves #81)

--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -184,7 +184,7 @@
 <template name="result">
     {{#with athlete}}
         <li class="accordion-item result-accordion {{#if not certificateWritten}}{{#if
-                valid}}accordion-item-expanded{{/if}}{{/if}}">
+                valid}}accordion-item-expanded{{/if}}{{/if}} {{#if moved}}fade-open{{/if}}">
             <a href="#" class="item-content item-link">
                 <div class="item-media">
 
