--- a/meteor/imports/ui/components/output/resultCollapse.css
+++ b/meteor/imports/ui/components/output/resultCollapse.css
@@ -1,3 +1,17 @@
+.collapsible {
+    overflow: hidden;
+    -webkit-transition: max-height 1s;
+    -moz-transition: max-height 1s;
+    -ms-transition: max-height 1s;
+    -o-transition: max-height 1s;
+    transition: max-height 1s;
+    max-height: 4000px;
+}
+
+.collapsible.collapsed {
+    max-height: 0;
+}
+
 .result-accordion {
     overflow: hidden;
     -webkit-transition: max-height 1s;
