--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -140,7 +140,7 @@
                 <p style="text-align: center;">Es wurden noch keine Messdaten übermittelt.</p>
             </div>
         {{/if}}
-        <div class="collapsible {{#if notContainsAthletes validAthletes}}collapsed{{/if}}">
+        <div class="autoWidthListBlock collapsible {{#if notContainsAthletes validAthletes}}collapsed{{/if}}">
             <div class="content-block-title" data-swiper-parallax="-100" data-swiper-parallax-duration="500">Zu
                 erstellende Urkunden
             </div>
@@ -153,7 +153,7 @@
             </div>
         </div>
 
-        <div class="collapsible {{#if notContainsAthletes invalidAthletes}}collapsed{{/if}}">
+        <div class="autoWidthListBlock collapsible {{#if notContainsAthletes invalidAthletes}}collapsed{{/if}}">
             <div class="content-block-title" data-swiper-parallax="-100" data-swiper-parallax-duration="500">Keine
                 ausreichenden Daten
             </div>
@@ -166,7 +166,7 @@
             </div>
         </div>
 
-        <div class="collapsible {{#if notContainsAthletes doneAthletes}}collapsed{{/if}}">
+        <div class="autoWidthListBlock collapsible {{#if notContainsAthletes doneAthletes}}collapsed{{/if}}">
             <div class="content-block-title" data-swiper-parallax="-100" data-swiper-parallax-duration="500">
                 Fertige Urkunden
             </div>
