--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -211,12 +211,12 @@
                                 </svg>
                             {{else}}
                                 <svg style="display: inline-block"
-                                     class="output-icon oi-warn animated todo-svg"
+                                     class="output-icon oi-ready animated todo-svg"
                                      xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
                                     <circle class="oi__circle" cx="26" cy="26" r="25"
                                             fill="none"></circle>
-                                    <path class="oi__dash" fill="none"
-                                          d="M11.5 26 L40.5 26"></path>
+                                    <path class="oi__check" fill="none"
+                                          d="M14.1 27.2l7.1 7.2 16.7-16.8"></path>
                                 </svg>
                             {{/if}}
                         {{/if}}
