--- a/meteor/client/main.css
+++ b/meteor/client/main.css
@@ -16,7 +16,7 @@ html, html * {
         margin-left: calc(50% - 400px);
     }
 
-    .autoWidthListBlock .list-block {
+    .autoWidthListBlock ul {
         border-left: 1px solid rgb(200, 200, 200);
         border-right: 1px solid rgb(200, 200, 200);
     }
