--- a/meteor/imports/ui/components/input/index.html
+++ b/meteor/imports/ui/components/input/index.html
@@ -228,6 +228,15 @@
 <template name="attempt">
     <li>
         <div class="item-content">
+            <div class="item-media">
+                {{#with measurement}}
+                    {{#if synced}}
+                        <span style="color: green; ">Y</span>
+                    {{else}}
+                        <span style="color: red; ">N</span>
+                    {{/if}}
+                {{/with}}
+            </div>
             <div class="item-inner">
                 <div class="item-title label">{{inc n}}. Versuch</div>
                 <div class="item input">
