Added refresh button @ certificate UI (closes #85)

--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -62,6 +62,9 @@
                         <li><a href="#" class="list-button item-link group-link"
                                data-target="{{@index}}">{{this.name}}</a></li>
                     {{/each}}
+                    <li>
+                        <a href="#" class="list-button item-link refresh-link"><i class="f7-icons">reload</i></a>
+                    </li>
                 </ul>
             </div>
         </div>
