--- a/meteor/imports/ui/components/input/index.html
+++ b/meteor/imports/ui/components/input/index.html
@@ -199,9 +199,9 @@
             <div class="item-media">
                 {{#with measurement}}
                     {{#if synced}}
-                        <span style="color: green; ">Y</span>
+                        <!--{{> iconOK}}-->
                     {{else}}
-                        <span style="color: red; ">N</span>
+                        <!--{{> iconErr}}-->
                     {{/if}}
                 {{/with}}
             </div>
