Removed border bottom on tables

--- a/meteor/imports/ui/components/login/choices/index.html
+++ b/meteor/imports/ui/components/login/choices/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="footer">
         <table align="center">
-            <tr>
+            <tr style="border: none">
                 <td style="border-right: 1px solid lightgrey; padding-right: 20px;">
                     <div data-popup=".popup-impressum" class="open-popup t-center">
                         Impressum
