--- a/meteor/imports/ui/components/login/login/index.html
+++ b/meteor/imports/ui/components/login/login/index.html
@@ -19,7 +19,7 @@
                     </ul>
                 </div>
                 <table align="center">
-                    <tr>
+                    <tr style="border: none">
                         <td style="border-right: 1px solid lightgrey; padding-right: 20px;">
                             <a href="#" class="item-link list-button login-back-button" data-type="{{type}}">Zurück</a>
                         </td>
